got it to work